# nanovllm-voxcpm

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  ISSUE.md  PLAN.md  README.md  example.py  example_lora.py  example_lora_sync.py  example_sync.py  pyproject.toml
.github/workflows/: ci.yml  release-pypi.yml
.omo/evidence/: task-1-continuous-test-coverage.txt  task-10-continuous-test-coverage.txt  task-11-continuous-test-coverage.txt  task-12-continuous-test-coverage.txt  task-13-continuous-test-coverage.txt  task-14-continuous-test-coverage.txt  task-15-continuous-test-coverage.txt  task-15-fix-continuous-test-coverage.txt  task-16-continuous-test-coverage.txt  task-17-continuous-test-coverage.txt  task-17-fix-continuous-test-coverage.txt  task-18-continuous-test-coverage.txt  task-18-fix-continuous-test-coverage.txt  task-19-continuous-test-coverage.txt  task-19-fix-continuous-test-coverage.txt  task-2-continuous-test-coverage.txt  task-20-continuous-test-coverage.txt  task-21-continuous-test-coverage.txt  task-22-continuous-test-coverage.txt  task-23-continuous-test-coverage.txt  task-24-continuous-test-coverage.txt  task-3-continuous-test-coverage.txt  task-4-continuous-test-coverage.txt  task-5-continuous-test-coverage.txt  task-6-continuous-test-coverage.txt  task-7-continuous-test-coverage.txt  task-8-continuous-test-coverage.txt  task-9-continuous-test-coverage.txt  wave4-gap-closure-final.txt
api_server/: app.py
benchmark/: README.md  bench_closed_loop_users.py  bench_inference.py  bench_open_loop_users.py  lora_bench_utils.py
deployment/: CLIENT_API.md  README.md  client.py  pyproject.toml  ws_client.py
deployment/app/: main.py
deployment/app/api/: api.py  deps.py
deployment/app/api/routes/: encode_latents.py  generate.py  info.py  websocket.py
deployment/app/core/: config.py  lifespan.py  metrics.py
deployment/app/schemas/: http.py  websocket.py
deployment/app/services/: asr.py  llm.py  mp3.py  opus.py  pipeline.py
deployment/tests/: conftest.py  test_core_config.py  test_deployment_app.py  test_routes_additional_coverage.py  test_routes_websocket.py  test_services_mp3.py  test_services_opus.py  test_services_pipeline.py
docs/: coverage-baseline.md  coverage-policy.md
docs/adr/: 0001-runner-owns-host-device-transfers.md
docs/standards/: runner-transfer-boundary.md
fastapi/: app.py  client.py
frontend/: index.html
nanovllm_voxcpm/: __init__.py  config.py  llm.py  lora.py
nanovllm_voxcpm/engine/: block_manager.py  llm_engine.py  lora_manager.py  model_runner.py  scheduler.py  sequence.py
nanovllm_voxcpm/layers/: __init__.py  attention.py  audio_vae.py  audio_vae_v2.py  embed_head.py  layernorm.py  linear.py  lora.py
nanovllm_voxcpm/lora_ops/triton_ops/: lora_expand_op.py  lora_kernel_metadata.py  lora_shrink_op.py  utils.py
nanovllm_voxcpm/models/voxcpm/: config.py  engine.py  lora_loader.py  model.py  model_utils.py  model_utils_shapes.py  runner.py  runner_utils.py  server.py
nanovllm_voxcpm/models/voxcpm2/: config.py  engine.py  lora_loader.py  model.py  model_utils.py  model_utils_cfm.py  model_utils_rope.py  runner.py  server.py
nanovllm_voxcpm/utils/: context.py  distributed.py  loader.py  seed.py
scripts/: coverage.sh  gpu_smoke.sh  repro_lora_plan_cache_growth.py
tests/: _shims.py
tests/parity/: README.md
tests/unit/: conftest.py  test_attention_layers.py  test_block_manager.py  test_context.py  test_core_server_threadpool_starvation.py  test_embed_head.py  test_gpu_marker_smoke.py  test_layers_basic.py  test_linear_layers.py  test_llm_engine.py  test_llm_from_pretrained.py  test_loader_lora.py  test_lora_cuda.py  test_lora_layers.py  test_lora_manager.py  test_lora_runtime.py  test_model_runner_enforce_eager_lora.py  test_model_runner_extended.py  test_model_runner_helpers.py  test_scheduler.py  test_seed_utils.py  test_tp_gpu_smoke.py  test_triton_ops_cpu.py  test_voxcpm2_chunk_sizes.py  test_voxcpm2_engine_max_model_len.py  test_voxcpm2_euler_prealloc.py  test_voxcpm2_lora_checkpoint_loader.py  test_voxcpm2_model_utils.py  test_voxcpm2_model_utils_config.py  test_voxcpm2_model_utils_rope.py  test_voxcpm2_server_encode_latents.py  test_voxcpm2_server_routes.py  test_voxcpm2_serverpool_lora_api.py  test_voxcpm2_utils.py  test_voxcpm_engine_max_model_len.py  test_voxcpm_engine_orchestration.py  test_voxcpm_lora_checkpoint_loader.py  test_voxcpm_model_utils.py  test_voxcpm_runner.py  test_voxcpm_runner_utils.py  (+3 more)
