[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-voxcpm"
version = "1.0.0"
authors = [{ name = "Guoyang Zeng" }]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"
description = "VoxCPM inference engine based on Nano-vLLM"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "xxhash",
    "torchaudio",
    "tqdm",
    "numpy",
    "pydantic",
    "flash-attn",
    "soundfile>=0.13.1",
    "torchcodec",
]

[project.urls]
Homepage="https://github.com/a710128/nanovllm-voxcpm"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm_voxcpm*"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.workspace]
members = ["deployment"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
